a little style fix of overlap when tags have big names

--- a/askbot/skins/default/media/style/style.css
+++ b/askbot/skins/default/media/style/style.css
@@ -1139,7 +1139,7 @@ ul#related-tags {
 ul.tags li {
   float: left;
   display: block;
-  margin: 0 8px 0 0;
+  margin: 0 8px 8px 0;
   padding: 0;
   height: 20px;
 }
